Update DateToEpochExample.java