@@ -1,6 +1,6 @@
- return accounts.stream()
-                .sorted(Comparator.comparingInt(account -> {
-                    int index = priorityOrder.indexOf(account.getRelationship());
-                    return index >= 0 ? index : priorityOrder.size(); // non-priority go to end
-                }))
-                .toList();
+return accounts.stream()
+        .sorted(Comparator.comparingInt(account -> {
+            int index = priorityOrder.indexOf(account.getRelationship());
+            return index >= 0 ? index : priorityOrder.size();
+        }))
+        .collect(Collectors.toList());
